--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "node server.js",
     "seeds": "node seeds/index.js"
   },
@@ -28,5 +28,8 @@
     "express-session": "^1.17.2",
     "mysql2": "^2.3.2",
     "sequelize": "^6.7.0"
+  },
+  "devDependencies": {
+    "jest": "^27.3.1"
   }
 }
